insere as novas visions nos arquivos .json de tradução

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,66 +46,47 @@
         },
         "5e49d5db6301df00013b98df" : {
             "name": " Lago de furnas - 2017",
-            "5e49d4bf6301df00013b98dc5e49d5db6301df00013b98df" : "OLI_05_04_17",
-            "5e49d49e6301df00013b98db5e49d5db6301df00013b98df" : "OLI_08_06_17",
-            "5e49d4666301df00013b98da5e49d5db6301df00013b98df" : "OLI_26_07_17",
+            "5e49d4bf6301df00013b98dc5e49d5db6301df00013b98df" : "OLI_14_10_17",
+            "5e49d49e6301df00013b98db5e49d5db6301df00013b98df" : "OLI_28_09_17",
+            "5e49d4666301df00013b98da5e49d5db6301df00013b98df" : "OLI_12_09_17",
             "5e49d4466301df00013b98d95e49d5db6301df00013b98df" : "OLI_27_08_17",
-            "5e49d4136301df00013b98d85e49d5db6301df00013b98df" : "OLI_12_09_17",
-            "5e49d3ef6301df00013b98d75e49d5db6301df00013b98df" : "OLI_28_09_17",
-            "5e49d3c86301df00013b98d65e49d5db6301df00013b98df" : "OLI_14_10_17"
-        },        
-        "5c40fe3a0e9b2a14264e03a7" : {
-            "name": " Cerrado",
-            "5c49f7391a21020001cd663e5c40fe3a0e9b2a14264e03a7": "States",            
-            "5c49f7791a21020001cd66405c40fe3a0e9b2a14264e03a7": "Biome Border",
-            "5c49f78e1a21020001cd66415c40fe3a0e9b2a14264e03a7": "Counties",            
-            "5c5dc500c4267d00012843245c40fe3a0e9b2a14264e03a7": "LANDSAT - 2000/2018",
-            "5c65c03fc4267d00012843255c40fe3a0e9b2a14264e03a7": "Yearly Deforestation - 2000/2018"
-        },        
-        "5c40fdce0e9b2a14264e03a6" : {
-            "name": " Legal Amazon",
-            "5c49f5901a21020001cd66375c40fdce0e9b2a14264e03a6": "Forest - 2016/2018",
-            "5c49f5bc1a21020001cd66385c40fdce0e9b2a14264e03a6": "Yearly Deforestation - 2008/2018",
-            "5c49f5df1a21020001cd66395c40fdce0e9b2a14264e03a6": "Deforestation Mask - 1988/2007",
-            "5c49f61b1a21020001cd663a5c40fdce0e9b2a14264e03a6": "Hydrography",
-            "5c49f6761a21020001cd663b5c40fdce0e9b2a14264e03a6": "No Forest",
-            "5c49f6a51a21020001cd663c5c40fdce0e9b2a14264e03a6": "Cloud - 2016/2018",
-            "5c49f6ba1a21020001cd663d5c40fdce0e9b2a14264e03a6": "Legal Amazon",
-            "5c9a55b1c88eaf000187b0435c40fdce0e9b2a14264e03a6": "Legal Amazon Mosaic - 2000/2018"
-        },        
-        "5c9bd04ae2e106099a3fd5ee" : {
-            "name": " Amazon",
-            "5c9bce7b6d9f9d00010068c35c9bd04ae2e106099a3fd5ee": "Forest - 2016/2018",
-            "5c9bcc136d9f9d00010068c05c9bd04ae2e106099a3fd5ee": "Deforestation Mask - 1988/2007",
-            "5c9bcf646d9f9d00010068c65c9bd04ae2e106099a3fd5ee": "Yearly Deforestation - 2008/2018",
-            "5c9bceb06d9f9d00010068c45c9bd04ae2e106099a3fd5ee": "Hydrography",
-            "5c9bcef16d9f9d00010068c55c9bd04ae2e106099a3fd5ee": "No Forest",
-            "5c9bcdfb6d9f9d00010068c25c9bd04ae2e106099a3fd5ee": "Cloud - 2016/2018",
-            "5c9bcd576d9f9d00010068c15c9bd04ae2e106099a3fd5ee": "Amazon Biome",
-            "5c9a55b1c88eaf000187b0435c9bd04ae2e106099a3fd5ee": "Legal Amazon Mosaic - 2000/2018"
+            "5e49d4136301df00013b98d85e49d5db6301df00013b98df" : "OLI_26_07_17",
+            "5e49d3ef6301df00013b98d75e49d5db6301df00013b98df" : "OLI_08_06_17",
+            "5e49d3c86301df00013b98d65e49d5db6301df00013b98df" : "OLI_05_04_17"
         },
-        "5cd46155aa127a00017de863" : {
-            "name": " Pampa",
-            "5cd46016aa127a00017de85f5cd46155aa127a00017de863": "Deforestation Mask up to 2016",
-            "5cd4602daa127a00017de8605cd46155aa127a00017de863": "Biome Border"
+        "5e5c4542a85b060001960886" : {
+            "name" : "Lago de Furnas - Sensor TM",
+            "5e5c44c7a85b0600019608845e5c4542a85b060001960886": "TM_01_07_02",
+            "5e5c44f9a85b0600019608855e5c4542a85b060001960886": "TM_02_08_08"
         },
-        "5cd460faaa127a00017de861" : {
-            "name": " Pantanal",
-            "5cd46876aa127a00017de8655cd460faaa127a00017de861": "Deforestation Mask up to 2016",
-            "5cd45fffaa127a00017de85e5cd460faaa127a00017de861": "Biome Border"
-        },
-        "5c8107880cf423000144ebd8" : {
-            "name": " Cerrado",
-            "5c49f7391a21020001cd663e5c8107880cf423000144ebd8": "States",            
-            "5c49f7791a21020001cd66405c8107880cf423000144ebd8": "Biome Border",
-            "5c49f78e1a21020001cd66415c8107880cf423000144ebd8": "Counties",
-            "5c8105e60cf423000144ebd75c8107880cf423000144ebd8": "Cerrado Deforestation Alerts"
-        },
-        "5c810c820cf423000144ebda" : {
-            "name": " Legal Amazon",
-            "5c810a980cf423000144ebd95c810c820cf423000144ebda": "Legal Amazon Deforestation Alerts",
-            "5c49f6ba1a21020001cd663d5c810c820cf423000144ebda": "Legal Amazon"
+        "5e5c3ecea85b060001960882" : {
+            "name": "Lago de Furnas",
+            "5e402b03c98e9f0001a7b1cc5e5c3ecea85b060001960882" : "OLI_03_08_14",
+            "5e49d3206301df00013b98d45e5c3ecea85b060001960882" : "OLI_23_09_15",
+            "5e49d3606301df00013b98d55e5c3ecea85b060001960882" : "OLI_08_08_16",
+            "5e49d4bf6301df00013b98dc5e5c3ecea85b060001960882" : "OLI_14_10_17",
+            "5e49d49e6301df00013b98db5e5c3ecea85b060001960882" : "OLI_28_09_17",
+            "5e49d4666301df00013b98da5e5c3ecea85b060001960882" : "OLI_12_09_17",
+            "5e49d4466301df00013b98d95e5c3ecea85b060001960882" : "OLI_27_08_17",
+            "5e49d4136301df00013b98d85e5c3ecea85b060001960882" : "OLI_26_07_17",
+            "5e49d3ef6301df00013b98d75e5c3ecea85b060001960882" : "OLI_08_06_17",
+            "5e49d3c86301df00013b98d65e5c3ecea85b060001960882" : "OLI_05_04_17",
+            "5e5c3e09a85b06000196087d5e5c3ecea85b060001960882" : "OLI_14_08_18",
+            "5e5c3e30a85b06000196087e5e5c3ecea85b060001960882" : "OLI_01_08_19",
+            "5e5c3e5da85b06000196087f5e5c3ecea85b060001960882" : "OLI_04_10_19",
+            "5e5c3e87a85b0600019608805e5c3ecea85b060001960882" : "OLI_17_08_19",
+            "5e5c3eb1a85b0600019608815e5c3ecea85b060001960882" : "OLI_30_06_19"
         },        
+        "5e5ae3ef4656e10001090aa9" : {
+            "name": "Bacia de Furnas",
+            "5e5ae2774656e10001090aa65e5ae3ef4656e10001090aa9": "Bacia Hidrográfica de Furnas",
+            "5e5ae2c04656e10001090aa75e5ae3ef4656e10001090aa9": "Lago de Furnas na Cota Máxima",
+            "5e5ae2fa4656e10001090aa85e5ae3ef4656e10001090aa9": "Rios Principais de Furnas"
+        },
+        "5e5c0f38c5c5c40001859bd3" : {
+            "name": "Topografia de Furnas",
+            "5e5c0eccc5c5c40001859bd25e5c0f38c5c5c40001859bd3": "Carta Topográfica de Alfenas"
+        },
         "control3" : "Others Layers",
         "noLegend" : "To see legends, you should enable layers."
     },
