- insere referência a "mCS-sisgeo-theme.css" no angular.json para que ele seja carregado em produção - retorna a referência a angular form no package.json, pois estava causando erro de compilação - retorna com a classe css "pull-right" pois o bootstrap não esta sendo carregado no servidor - traduz o nome das visions e das layers - corrige o nome da vision do lago de furnas do sensor TM - Altera o título do site - Abre uma nova aba ao clicar no link de contato - Aumenta a fonte do texto abaixo do logo, além de centralizar (verticalmente) melhor o logo e o texto

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -36,7 +36,7 @@
     "layerControl" : {
         "control1" : "Baselayers",
         "5e5c4542a85b060001960886" : {
-            "name" : "Lago de Furnas - Sensor TM",
+            "name" : "Lago de Furnas - TM",
             "5e5c44c7a85b0600019608845e5c4542a85b060001960886": "01/07/2002 - TM",
             "5e5c44f9a85b0600019608855e5c4542a85b060001960886": "02/08/2008 - TM",
             "5e66c21618eee00001f8771a5e5c4542a85b060001960886": "02/10/1995 - TM",
