--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,7 @@
     "layerControl" : {
         "control1" : "Baselayers",
         "5e5c4542a85b060001960886" : {
-            "name" : "Lago de Furnas - Sensor TM",
+            "name" : "Furnas Lake - TM",
             "5e5c44c7a85b0600019608845e5c4542a85b060001960886": "01/07/2002 - TM",
             "5e5c44f9a85b0600019608855e5c4542a85b060001960886": "02/08/2008 - TM",
             "5e66c21618eee00001f8771a5e5c4542a85b060001960886": "02/10/1995 - TM",
@@ -70,7 +70,7 @@
             "5e66c52918eee00001f877355e5c4542a85b060001960886": "31/07/2007 - TM"
         },  
         "5e5c3ecea85b060001960882" : {
-            "name": "Lago de Furnas - OLI",
+            "name": "Furnas Lake - OLI",
             "5e402b03c98e9f0001a7b1cc5e5c3ecea85b060001960882" : "03/08/2014 - OLI",
             "5e49d3206301df00013b98d45e5c3ecea85b060001960882" : "23/09/2015 - OLI",
             "5e49d3606301df00013b98d55e5c3ecea85b060001960882" : "08/08/2016 - OLI",
@@ -88,17 +88,17 @@
             "5e5c3eb1a85b0600019608815e5c3ecea85b060001960882" : "30/06/2019 - OLI"        
         },    
         "5e5ae3ef4656e10001090aa9" : {
-            "name": "Bacia de Furnas",
-            "5e5ae2774656e10001090aa65e5ae3ef4656e10001090aa9": "Bacia Hidrográfica de Furnas",
-            "5e5ae2c04656e10001090aa75e5ae3ef4656e10001090aa9": "Lago de Furnas (99,2% do volume útil) - 28/04/2008",
-            "5e5ae2fa4656e10001090aa85e5ae3ef4656e10001090aa9": "Rios Principais"
+            "name": "Furnas Watershed",
+            "5e5ae2774656e10001090aa65e5ae3ef4656e10001090aa9": "Furnas Watershed",
+            "5e5ae2c04656e10001090aa75e5ae3ef4656e10001090aa9": "Furnas Lake (99.2% of useful volume) - 28/04/2008",
+            "5e5ae2fa4656e10001090aa85e5ae3ef4656e10001090aa9": "Main Rivers"
         },
         "5e5c0f38c5c5c40001859bd3" : {
-            "name": "Cartas Topográficas",
-            "5e5c0eccc5c5c40001859bd25e5c0f38c5c5c40001859bd3" : "Carta de Alfenas",
-            "5e66cde318eee00001f877365e5c0f38c5c5c40001859bd3" : "Carta de Varginha",
-            "5e66fdb318eee00001f877375e5c0f38c5c5c40001859bd3" : "Articulação de Furnas(linha)",
-            "5ea8c615e60860000117d1b75e5c0f38c5c5c40001859bd3" : "Bacia Hidrográfica de Furnas (linha)"
+            "name": "Topographic Maps",
+            "5e5c0eccc5c5c40001859bd25e5c0f38c5c5c40001859bd3" : "Alfenas Topographics",
+            "5e66cde318eee00001f877365e5c0f38c5c5c40001859bd3" : "Varginha Topographics",
+            "5e66fdb318eee00001f877375e5c0f38c5c5c40001859bd3" : "Furnas Articulation (line)",
+            "5ea8c615e60860000117d1b75e5c0f38c5c5c40001859bd3" : "Furnas Watershed (line)"
         },
         "control3" : "Others Layers",
         "noLegend" : "To see legends, you should enable layers."
