- adiciona referência as layers novas das 76 cartas inseridas no banco e geoserver nos arquivos en.json e pt-br.json - corrige bug que não escondia o spinner de carregamento quando alguma exceção era lançada ao chamar fitBounds

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,16 +89,92 @@
         },    
         "5e5ae3ef4656e10001090aa9" : {
             "name": "Furnas Watershed",
-            "5e5ae2774656e10001090aa65e5ae3ef4656e10001090aa9": "Furnas Watershed",
-            "5e5ae2c04656e10001090aa75e5ae3ef4656e10001090aa9": "Furnas Lake (99.2% of useful volume) - 28/04/2008",
-            "5e5ae2fa4656e10001090aa85e5ae3ef4656e10001090aa9": "Main Rivers"
+            "5e5ae2774656e10001090aa65e5ae3ef4656e10001090aa9" : "Furnas Watershed",
+            "5e5ae2c04656e10001090aa75e5ae3ef4656e10001090aa9" : "Furnas Lake (99.2% of useful volume) - 28/04/2008",
+            "5e5ae2fa4656e10001090aa85e5ae3ef4656e10001090aa9" : "Main Rivers",
+            "5ec8821695b72200010dadcc5e5ae3ef4656e10001090aa9" : "Flow Station",
+            "5ec8830f95b72200010dadcd5e5ae3ef4656e10001090aa9" : "Rain Gauge"
         },
         "5e5c0f38c5c5c40001859bd3" : {
             "name": "Topographic Maps",
-            "5e5c0eccc5c5c40001859bd25e5c0f38c5c5c40001859bd3" : "Alfenas Topographics",
-            "5e66cde318eee00001f877365e5c0f38c5c5c40001859bd3" : "Varginha Topographics",
-            "5e66fdb318eee00001f877375e5c0f38c5c5c40001859bd3" : "Furnas Articulation (line)",
-            "5ea8c615e60860000117d1b75e5c0f38c5c5c40001859bd3" : "Furnas Watershed (line)"
+            "5e66fdb318eee00001f877375e5c0f38c5c5c40001859bd3" : "Articulação de Furnas(linha)",
+            "5ea8c615e60860000117d1b75e5c0f38c5c5c40001859bd3" : "Bacia Hidrográfica de Furnas (linha)",
+            "5ecad5a58464511540107f3b5e5c0f38c5c5c40001859bd3" : "Aiuruoca",
+            "5ecad5a58464511540107f3e5e5c0f38c5c5c40001859bd3" : "Alagoa",
+            "5ecad5a58464511540107f415e5c0f38c5c5c40001859bd3" : "Alfenas",
+            "5ecad5a58464511540107f445e5c0f38c5c5c40001859bd3" : "Andrelândia",
+            "5ecad5a58464511540107f475e5c0f38c5c5c40001859bd3" : "Arantina",
+            "5ecad5a58464511540107f4a5e5c0f38c5c5c40001859bd3" : "Arcos",
+            "5ecad5a58464511540107f4d5e5c0f38c5c5c40001859bd3" : "Areado",
+            "5ecad5a58464511540107f505e5c0f38c5c5c40001859bd3" : "Baiões",
+            "5ecad5a58464511540107f535e5c0f38c5c5c40001859bd3" : "Barbacena",
+            "5ecad5a58464511540107f565e5c0f38c5c5c40001859bd3" : "Bias Fortes",
+            "5ecad5a58464511540107f595e5c0f38c5c5c40001859bd3" : "Boa Esperança",
+            "5ecad5a58464511540107f5c5e5c0f38c5c5c40001859bd3" : "Bom Jardim de Minas",
+            "5ecad5a58464511540107f5f5e5c0f38c5c5c40001859bd3" : "Borda da Mata",
+            "5ecad5a58464511540107f625e5c0f38c5c5c40001859bd3" : "Caldas",
+            "5ecad5a58464511540107f655e5c0f38c5c5c40001859bd3" : "Camacho",
+            "5ecad5a58464511540107f685e5c0f38c5c5c40001859bd3" : "Cambuí",
+            "5ecad5a58464511540107f6b5e5c0f38c5c5c40001859bd3" : "Campestre",
+            "5ecad5a68464511540107f6e5e5c0f38c5c5c40001859bd3" : "Campo Belo",
+            "5ecad5a68464511540107f715e5c0f38c5c5c40001859bd3" : "Campos do Jordão",
+            "5ecad5a68464511540107f745e5c0f38c5c5c40001859bd3" : "Campos Gerais",
+            "5ecad5a68464511540107f775e5c0f38c5c5c40001859bd3" : "Capela Nova",
+            "5ecad5a68464511540107f7a5e5c0f38c5c5c40001859bd3" : "Capitólio",
+            "5ecad5a68464511540107f7d5e5c0f38c5c5c40001859bd3" : "Carandaí",
+            "5ecad5a68464511540107f805e5c0f38c5c5c40001859bd3" : "Carmópolis de Minas",
+            "5ecad5a68464511540107f835e5c0f38c5c5c40001859bd3" : "Conceição da Aparecida",
+            "5ecad5a68464511540107f865e5c0f38c5c5c40001859bd3" : "Conceição do Rio Verde",
+            "5ecad5a68464511540107f895e5c0f38c5c5c40001859bd3" : "Conceição dos Ouros",
+            "5ecad5a68464511540107f8c5e5c0f38c5c5c40001859bd3" : "Coqueiral",
+            "5ecad5a68464511540107f8f5e5c0f38c5c5c40001859bd3" : "Cristais",
+            "5ecad5a68464511540107f925e5c0f38c5c5c40001859bd3" : "Elói Mendes",
+            "5ecad5a68464511540107f955e5c0f38c5c5c40001859bd3" : "Ewbank da Câmara",
+            "5ecad5a68464511540107f985e5c0f38c5c5c40001859bd3" : "Formiga",
+            "5ecad5a68464511540107f9b5e5c0f38c5c5c40001859bd3" : "Guapé",
+            "5ecad5a68464511540107f9e5e5c0f38c5c5c40001859bd3" : "Ibertioga",
+            "5ecad5a68464511540107fa15e5c0f38c5c5c40001859bd3" : "Ipuiúna",
+            "5ecad5a68464511540107fa45e5c0f38c5c5c40001859bd3" : "Itajubá",
+            "5ecad5a68464511540107fa75e5c0f38c5c5c40001859bd3" : "Itapecerica",
+            "5ecad5a68464511540107faa5e5c0f38c5c5c40001859bd3" : "Itutinga",
+            "5ecad5a68464511540107fad5e5c0f38c5c5c40001859bd3" : "Jacarandira",
+            "5ecad5a68464511540107fb05e5c0f38c5c5c40001859bd3" : "Lambari",
+            "5ecad5a68464511540107fb35e5c0f38c5c5c40001859bd3" : "Lavras",
+            "5ecad5a68464511540107fb65e5c0f38c5c5c40001859bd3" : "Liberdade",
+            "5ecad5a68464511540107fb95e5c0f38c5c5c40001859bd3" : "Lima Duarte",
+            "5ecad5a68464511540107fbc5e5c0f38c5c5c40001859bd3" : "Luminárias",
+            "5ecad5a68464511540107fbf5e5c0f38c5c5c40001859bd3" : "Machado",
+            "5ecad5a68464511540107fc25e5c0f38c5c5c40001859bd3" : "Madre de Deus de Minas",
+            "5ecad5a68464511540107fc55e5c0f38c5c5c40001859bd3" : "Minduri",
+            "5ecad5a68464511540107fc85e5c0f38c5c5c40001859bd3" : "Monte Belo",
+            "5ecad5a68464511540107fcb5e5c0f38c5c5c40001859bd3" : "Nazareno",
+            "5ecad5a68464511540107fce5e5c0f38c5c5c40001859bd3" : "Nova Resende",
+            "5ecad5a68464511540107fd15e5c0f38c5c5c40001859bd3" : "Oliveira",
+            "5ecad5a68464511540107fd45e5c0f38c5c5c40001859bd3" : "Ouro Fino",
+            "5ecad5a68464511540107fd75e5c0f38c5c5c40001859bd3" : "Passa-Tempo",
+            "5ecad5a78464511540107fda5e5c0f38c5c5c40001859bd3" : "Passa Quatro",
+            "5ecad5a78464511540107fdd5e5c0f38c5c5c40001859bd3" : "Piedade do Rio Grande",
+            "5ecad5a78464511540107fe05e5c0f38c5c5c40001859bd3" : "Poço Fundo",
+            "5ecad5a78464511540107fe35e5c0f38c5c5c40001859bd3" : "Pontevila",
+            "5ecad5a78464511540107fe65e5c0f38c5c5c40001859bd3" : "Pouso Alegre",
+            "5ecad5a78464511540107fe95e5c0f38c5c5c40001859bd3" : "Pouso Alto",
+            "5ecad5a78464511540107fec5e5c0f38c5c5c40001859bd3" : "Resende Costa",
+            "5ecad5a78464511540107fef5e5c0f38c5c5c40001859bd3" : "Rio Capivari",
+            "5ecad5a78464511540107ff25e5c0f38c5c5c40001859bd3" : "Santa Rita de Jacutinga",
+            "5ecad5a78464511540107ff55e5c0f38c5c5c40001859bd3" : "Santa Rita do Sapucaí",
+            "5ecad5a78464511540107ff85e5c0f38c5c5c40001859bd3" : "Santana do Garambéu",
+            "5ecad5a78464511540107ffb5e5c0f38c5c5c40001859bd3" : "Santana do Jacaré",
+            "5ecad5a78464511540107ffe5e5c0f38c5c5c40001859bd3" : "Santo Hilário",
+            "5ecad5a784645115401080015e5c0f38c5c5c40001859bd3" : "Santos Dumont",
+            "5ecad5a784645115401080045e5c0f38c5c5c40001859bd3" : "São Gonçalo do Sapucaí",
+            "5ecad5a784645115401080075e5c0f38c5c5c40001859bd3" : "São João Del-Rei",
+            "5ecad5a7846451154010800a5e5c0f38c5c5c40001859bd3" : "São Lourenço",
+            "5ecad5a7846451154010800d5e5c0f38c5c5c40001859bd3" : "São Tiago",
+            "5ecad5a784645115401080105e5c0f38c5c5c40001859bd3" : "Senhora dos Remédios",
+            "5ecad5a784645115401080135e5c0f38c5c5c40001859bd3" : "Tiradentes",
+            "5ecad5a784645115401080165e5c0f38c5c5c40001859bd3" : "Tres Pontas",
+            "5ecad5a784645115401080195e5c0f38c5c5c40001859bd3" : "Varginha",
+            "5ecad5a7846451154010801c5e5c0f38c5c5c40001859bd3" : "Virgínia"
         },
         "control3" : "Others Layers",
         "noLegend" : "To see legends, you should enable layers."
