- insere referências ás últimas cartas topográficas nos arquivos en.json e pt-br.json - define linguagem padrão para pt-br quando o parâmetro hl não for passado pela url - define uma borda entre as tools básicas e a primeira vision na barra lateral

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -99,82 +99,104 @@
             "name": "Topographic Maps",
             "5e66fdb318eee00001f877375e5c0f38c5c5c40001859bd3" : "Articulação de Furnas(linha)",
             "5ea8c615e60860000117d1b75e5c0f38c5c5c40001859bd3" : "Bacia Hidrográfica de Furnas (linha)",
-            "5ecad5a58464511540107f3b5e5c0f38c5c5c40001859bd3" : "Aiuruoca",
-            "5ecad5a58464511540107f3e5e5c0f38c5c5c40001859bd3" : "Alagoa",
-            "5ecad5a58464511540107f415e5c0f38c5c5c40001859bd3" : "Alfenas",
-            "5ecad5a58464511540107f445e5c0f38c5c5c40001859bd3" : "Andrelândia",
-            "5ecad5a58464511540107f475e5c0f38c5c5c40001859bd3" : "Arantina",
-            "5ecad5a58464511540107f4a5e5c0f38c5c5c40001859bd3" : "Arcos",
-            "5ecad5a58464511540107f4d5e5c0f38c5c5c40001859bd3" : "Areado",
-            "5ecad5a58464511540107f505e5c0f38c5c5c40001859bd3" : "Baiões",
-            "5ecad5a58464511540107f535e5c0f38c5c5c40001859bd3" : "Barbacena",
-            "5ecad5a58464511540107f565e5c0f38c5c5c40001859bd3" : "Bias Fortes",
-            "5ecad5a58464511540107f595e5c0f38c5c5c40001859bd3" : "Boa Esperança",
-            "5ecad5a58464511540107f5c5e5c0f38c5c5c40001859bd3" : "Bom Jardim de Minas",
-            "5ecad5a58464511540107f5f5e5c0f38c5c5c40001859bd3" : "Borda da Mata",
-            "5ecad5a58464511540107f625e5c0f38c5c5c40001859bd3" : "Caldas",
-            "5ecad5a58464511540107f655e5c0f38c5c5c40001859bd3" : "Camacho",
-            "5ecad5a58464511540107f685e5c0f38c5c5c40001859bd3" : "Cambuí",
-            "5ecad5a58464511540107f6b5e5c0f38c5c5c40001859bd3" : "Campestre",
-            "5ecad5a68464511540107f6e5e5c0f38c5c5c40001859bd3" : "Campo Belo",
-            "5ecad5a68464511540107f715e5c0f38c5c5c40001859bd3" : "Campos do Jordão",
-            "5ecad5a68464511540107f745e5c0f38c5c5c40001859bd3" : "Campos Gerais",
-            "5ecad5a68464511540107f775e5c0f38c5c5c40001859bd3" : "Capela Nova",
-            "5ecad5a68464511540107f7a5e5c0f38c5c5c40001859bd3" : "Capitólio",
-            "5ecad5a68464511540107f7d5e5c0f38c5c5c40001859bd3" : "Carandaí",
-            "5ecad5a68464511540107f805e5c0f38c5c5c40001859bd3" : "Carmópolis de Minas",
-            "5ecad5a68464511540107f835e5c0f38c5c5c40001859bd3" : "Conceição da Aparecida",
-            "5ecad5a68464511540107f865e5c0f38c5c5c40001859bd3" : "Conceição do Rio Verde",
-            "5ecad5a68464511540107f895e5c0f38c5c5c40001859bd3" : "Conceição dos Ouros",
-            "5ecad5a68464511540107f8c5e5c0f38c5c5c40001859bd3" : "Coqueiral",
-            "5ecad5a68464511540107f8f5e5c0f38c5c5c40001859bd3" : "Cristais",
-            "5ecad5a68464511540107f925e5c0f38c5c5c40001859bd3" : "Elói Mendes",
-            "5ecad5a68464511540107f955e5c0f38c5c5c40001859bd3" : "Ewbank da Câmara",
-            "5ecad5a68464511540107f985e5c0f38c5c5c40001859bd3" : "Formiga",
-            "5ecad5a68464511540107f9b5e5c0f38c5c5c40001859bd3" : "Guapé",
-            "5ecad5a68464511540107f9e5e5c0f38c5c5c40001859bd3" : "Ibertioga",
-            "5ecad5a68464511540107fa15e5c0f38c5c5c40001859bd3" : "Ipuiúna",
-            "5ecad5a68464511540107fa45e5c0f38c5c5c40001859bd3" : "Itajubá",
-            "5ecad5a68464511540107fa75e5c0f38c5c5c40001859bd3" : "Itapecerica",
-            "5ecad5a68464511540107faa5e5c0f38c5c5c40001859bd3" : "Itutinga",
-            "5ecad5a68464511540107fad5e5c0f38c5c5c40001859bd3" : "Jacarandira",
-            "5ecad5a68464511540107fb05e5c0f38c5c5c40001859bd3" : "Lambari",
-            "5ecad5a68464511540107fb35e5c0f38c5c5c40001859bd3" : "Lavras",
-            "5ecad5a68464511540107fb65e5c0f38c5c5c40001859bd3" : "Liberdade",
-            "5ecad5a68464511540107fb95e5c0f38c5c5c40001859bd3" : "Lima Duarte",
-            "5ecad5a68464511540107fbc5e5c0f38c5c5c40001859bd3" : "Luminárias",
-            "5ecad5a68464511540107fbf5e5c0f38c5c5c40001859bd3" : "Machado",
-            "5ecad5a68464511540107fc25e5c0f38c5c5c40001859bd3" : "Madre de Deus de Minas",
-            "5ecad5a68464511540107fc55e5c0f38c5c5c40001859bd3" : "Minduri",
-            "5ecad5a68464511540107fc85e5c0f38c5c5c40001859bd3" : "Monte Belo",
-            "5ecad5a68464511540107fcb5e5c0f38c5c5c40001859bd3" : "Nazareno",
-            "5ecad5a68464511540107fce5e5c0f38c5c5c40001859bd3" : "Nova Resende",
-            "5ecad5a68464511540107fd15e5c0f38c5c5c40001859bd3" : "Oliveira",
-            "5ecad5a68464511540107fd45e5c0f38c5c5c40001859bd3" : "Ouro Fino",
-            "5ecad5a68464511540107fd75e5c0f38c5c5c40001859bd3" : "Passa-Tempo",
-            "5ecad5a78464511540107fda5e5c0f38c5c5c40001859bd3" : "Passa Quatro",
-            "5ecad5a78464511540107fdd5e5c0f38c5c5c40001859bd3" : "Piedade do Rio Grande",
-            "5ecad5a78464511540107fe05e5c0f38c5c5c40001859bd3" : "Poço Fundo",
-            "5ecad5a78464511540107fe35e5c0f38c5c5c40001859bd3" : "Pontevila",
-            "5ecad5a78464511540107fe65e5c0f38c5c5c40001859bd3" : "Pouso Alegre",
-            "5ecad5a78464511540107fe95e5c0f38c5c5c40001859bd3" : "Pouso Alto",
-            "5ecad5a78464511540107fec5e5c0f38c5c5c40001859bd3" : "Resende Costa",
-            "5ecad5a78464511540107fef5e5c0f38c5c5c40001859bd3" : "Rio Capivari",
-            "5ecad5a78464511540107ff25e5c0f38c5c5c40001859bd3" : "Santa Rita de Jacutinga",
-            "5ecad5a78464511540107ff55e5c0f38c5c5c40001859bd3" : "Santa Rita do Sapucaí",
-            "5ecad5a78464511540107ff85e5c0f38c5c5c40001859bd3" : "Santana do Garambéu",
-            "5ecad5a78464511540107ffb5e5c0f38c5c5c40001859bd3" : "Santana do Jacaré",
-            "5ecad5a78464511540107ffe5e5c0f38c5c5c40001859bd3" : "Santo Hilário",
-            "5ecad5a784645115401080015e5c0f38c5c5c40001859bd3" : "Santos Dumont",
-            "5ecad5a784645115401080045e5c0f38c5c5c40001859bd3" : "São Gonçalo do Sapucaí",
-            "5ecad5a784645115401080075e5c0f38c5c5c40001859bd3" : "São João Del-Rei",
-            "5ecad5a7846451154010800a5e5c0f38c5c5c40001859bd3" : "São Lourenço",
-            "5ecad5a7846451154010800d5e5c0f38c5c5c40001859bd3" : "São Tiago",
-            "5ecad5a784645115401080105e5c0f38c5c5c40001859bd3" : "Senhora dos Remédios",
-            "5ecad5a784645115401080135e5c0f38c5c5c40001859bd3" : "Tiradentes",
-            "5ecad5a784645115401080165e5c0f38c5c5c40001859bd3" : "Tres Pontas",
-            "5ecad5a784645115401080195e5c0f38c5c5c40001859bd3" : "Varginha",
-            "5ecad5a7846451154010801c5e5c0f38c5c5c40001859bd3" : "Virgínia"
+            "5ecae5f523d370c956c1843a5e5c0f38c5c5c40001859bd3" : "MDEHC",
+            "5ed58892a7a0c01c36b9f7e95e5c0f38c5c5c40001859bd3" : "Agulhas Negras",
+            "5ed58892a7a0c01c36b9f7ec5e5c0f38c5c5c40001859bd3" : "Aiuruoca",
+            "5ed58892a7a0c01c36b9f7ef5e5c0f38c5c5c40001859bd3" : "Alagoa",
+            "5ed58892a7a0c01c36b9f7f25e5c0f38c5c5c40001859bd3" : "Alfenas",
+            "5ed58892a7a0c01c36b9f7f55e5c0f38c5c5c40001859bd3" : "Alpinopolis",
+            "5ed58892a7a0c01c36b9f7f85e5c0f38c5c5c40001859bd3" : "Andrelandia",
+            "5ed58892a7a0c01c36b9f7fb5e5c0f38c5c5c40001859bd3" : "Arantina",
+            "5ed58892a7a0c01c36b9f7fe5e5c0f38c5c5c40001859bd3" : "Arcos",
+            "5ed58892a7a0c01c36b9f8015e5c0f38c5c5c40001859bd3" : "Areado",
+            "5ed58893a7a0c01c36b9f8045e5c0f38c5c5c40001859bd3" : "Baioes",
+            "5ed58893a7a0c01c36b9f8075e5c0f38c5c5c40001859bd3" : "Barbacena",
+            "5ed58893a7a0c01c36b9f80a5e5c0f38c5c5c40001859bd3" : "Bias Fortes",
+            "5ed58893a7a0c01c36b9f80d5e5c0f38c5c5c40001859bd3" : "Boa Esperanca",
+            "5ed58893a7a0c01c36b9f8105e5c0f38c5c5c40001859bd3" : "Bom Jardim de Minas",
+            "5ed58893a7a0c01c36b9f8135e5c0f38c5c5c40001859bd3" : "Borda da Mata",
+            "5ed58893a7a0c01c36b9f8165e5c0f38c5c5c40001859bd3" : "Botelhos",
+            "5ed58893a7a0c01c36b9f8195e5c0f38c5c5c40001859bd3" : "Caldas",
+            "5ed58893a7a0c01c36b9f81c5e5c0f38c5c5c40001859bd3" : "Camacho",
+            "5ed58893a7a0c01c36b9f81f5e5c0f38c5c5c40001859bd3" : "Cambui",
+            "5ed58893a7a0c01c36b9f8225e5c0f38c5c5c40001859bd3" : "Campestre",
+            "5ed58893a7a0c01c36b9f8255e5c0f38c5c5c40001859bd3" : "Campo Belo",
+            "5ed58893a7a0c01c36b9f8285e5c0f38c5c5c40001859bd3" : "Campos do Jordao",
+            "5ed58893a7a0c01c36b9f82b5e5c0f38c5c5c40001859bd3" : "Campos Gerais",
+            "5ed58893a7a0c01c36b9f82e5e5c0f38c5c5c40001859bd3" : "Capela Nova",
+            "5ed58893a7a0c01c36b9f8315e5c0f38c5c5c40001859bd3" : "Capitolio",
+            "5ed58893a7a0c01c36b9f8345e5c0f38c5c5c40001859bd3" : "Carandai",
+            "5ed58893a7a0c01c36b9f8375e5c0f38c5c5c40001859bd3" : "Carmo da Cachoeira",
+            "5ed58893a7a0c01c36b9f83a5e5c0f38c5c5c40001859bd3" : "Carmo do Rio Claro",
+            "5ed58893a7a0c01c36b9f83d5e5c0f38c5c5c40001859bd3" : "Carmopolis de Minas",
+            "5ed58893a7a0c01c36b9f8405e5c0f38c5c5c40001859bd3" : "Caxambu",
+            "5ed58893a7a0c01c36b9f8435e5c0f38c5c5c40001859bd3" : "Conceicao da Aparecida",
+            "5ed58893a7a0c01c36b9f8465e5c0f38c5c5c40001859bd3" : "Conceicao do Rio Verde",
+            "5ed58893a7a0c01c36b9f8495e5c0f38c5c5c40001859bd3" : "Conceicao dos Ouros",
+            "5ed58893a7a0c01c36b9f84c5e5c0f38c5c5c40001859bd3" : "Coqueiral",
+            "5ed58893a7a0c01c36b9f84f5e5c0f38c5c5c40001859bd3" : "Cristais",
+            "5ed58893a7a0c01c36b9f8525e5c0f38c5c5c40001859bd3" : "Cristina",
+            "5ed58893a7a0c01c36b9f8555e5c0f38c5c5c40001859bd3" : "Delfim Moreira",
+            "5ed58893a7a0c01c36b9f8585e5c0f38c5c5c40001859bd3" : "Eloi Mendes",
+            "5ed58893a7a0c01c36b9f85b5e5c0f38c5c5c40001859bd3" : "Ewbank da Camara",
+            "5ed58894a7a0c01c36b9f85e5e5c0f38c5c5c40001859bd3" : "Formiga",
+            "5ed58894a7a0c01c36b9f8615e5c0f38c5c5c40001859bd3" : "Furnas",
+            "5ed58894a7a0c01c36b9f8645e5c0f38c5c5c40001859bd3" : "Guape",
+            "5ed58894a7a0c01c36b9f8675e5c0f38c5c5c40001859bd3" : "Guaxupe",
+            "5ed58894a7a0c01c36b9f86a5e5c0f38c5c5c40001859bd3" : "Heliodora",
+            "5ed58894a7a0c01c36b9f86d5e5c0f38c5c5c40001859bd3" : "Ibertioga",
+            "5ed58894a7a0c01c36b9f8705e5c0f38c5c5c40001859bd3" : "Ipuiuna",
+            "5ed58894a7a0c01c36b9f8735e5c0f38c5c5c40001859bd3" : "Itajuba",
+            "5ed58894a7a0c01c36b9f8765e5c0f38c5c5c40001859bd3" : "Itapecerica",
+            "5ed58894a7a0c01c36b9f8795e5c0f38c5c5c40001859bd3" : "Itumirim",
+            "5ed58894a7a0c01c36b9f87c5e5c0f38c5c5c40001859bd3" : "Itutinga",
+            "5ed58894a7a0c01c36b9f87f5e5c0f38c5c5c40001859bd3" : "Jacarandira",
+            "5ed58894a7a0c01c36b9f8825e5c0f38c5c5c40001859bd3" : "Lambari",
+            "5ed58894a7a0c01c36b9f8855e5c0f38c5c5c40001859bd3" : "Lavras",
+            "5ed58894a7a0c01c36b9f8885e5c0f38c5c5c40001859bd3" : "Liberdade",
+            "5ed58894a7a0c01c36b9f88b5e5c0f38c5c5c40001859bd3" : "Lima Duarte",
+            "5ed58894a7a0c01c36b9f88e5e5c0f38c5c5c40001859bd3" : "Luminarias",
+            "5ed58894a7a0c01c36b9f8915e5c0f38c5c5c40001859bd3" : "Lorena",
+            "5ed58894a7a0c01c36b9f8945e5c0f38c5c5c40001859bd3" : "Machado",
+            "5ed58894a7a0c01c36b9f8975e5c0f38c5c5c40001859bd3" : "Madre de Deus de Minas",
+            "5ed58894a7a0c01c36b9f89a5e5c0f38c5c5c40001859bd3" : "Minduri",
+            "5ed58894a7a0c01c36b9f89d5e5c0f38c5c5c40001859bd3" : "Monteiro Lobato",
+            "5ed58894a7a0c01c36b9f8a05e5c0f38c5c5c40001859bd3" : "Monte Belo",
+            "5ed58894a7a0c01c36b9f8a35e5c0f38c5c5c40001859bd3" : "Nazareno",
+            "5ed58894a7a0c01c36b9f8a65e5c0f38c5c5c40001859bd3" : "Nepomuceno",
+            "5ed58894a7a0c01c36b9f8a95e5c0f38c5c5c40001859bd3" : "Nova Resende",
+            "5ed58894a7a0c01c36b9f8ac5e5c0f38c5c5c40001859bd3" : "Oliveira",
+            "5ed58894a7a0c01c36b9f8af5e5c0f38c5c5c40001859bd3" : "Ouro Fino",
+            "5ed58894a7a0c01c36b9f8b25e5c0f38c5c5c40001859bd3" : "Paraisopolis",
+            "5ed58894a7a0c01c36b9f8b55e5c0f38c5c5c40001859bd3" : "Passa-Tempo",
+            "5ed58894a7a0c01c36b9f8b85e5c0f38c5c5c40001859bd3" : "Passa Quatro",
+            "5ed58895a7a0c01c36b9f8bb5e5c0f38c5c5c40001859bd3" : "Piedade do Rio Grande",
+            "5ed58895a7a0c01c36b9f8be5e5c0f38c5c5c40001859bd3" : "Piui",
+            "5ed58895a7a0c01c36b9f8c15e5c0f38c5c5c40001859bd3" : "Poco Fundo",
+            "5ed58895a7a0c01c36b9f8c45e5c0f38c5c5c40001859bd3" : "PonteVila",
+            "5ed58895a7a0c01c36b9f8c75e5c0f38c5c5c40001859bd3" : "Pouso Alegre",
+            "5ed58895a7a0c01c36b9f8ca5e5c0f38c5c5c40001859bd3" : "Pouso Alto",
+            "5ed58895a7a0c01c36b9f8cd5e5c0f38c5c5c40001859bd3" : "Resende Costa",
+            "5ed58895a7a0c01c36b9f8d05e5c0f38c5c5c40001859bd3" : "Ribeirao da Espera",
+            "5ed58895a7a0c01c36b9f8d35e5c0f38c5c5c40001859bd3" : "Rio Capivari",
+            "5ed58895a7a0c01c36b9f8d65e5c0f38c5c5c40001859bd3" : "Santa Rita de Jacutinga",
+            "5ed58895a7a0c01c36b9f8d95e5c0f38c5c5c40001859bd3" : "Santa Rita do Sapucai",
+            "5ed58895a7a0c01c36b9f8dc5e5c0f38c5c5c40001859bd3" : "Santana do Garambeu",
+            "5ed58895a7a0c01c36b9f8df5e5c0f38c5c5c40001859bd3" : "Santana do Jacare",
+            "5ed58895a7a0c01c36b9f8e25e5c0f38c5c5c40001859bd3" : "Santo Antonio do Amparo",
+            "5ed58895a7a0c01c36b9f8e55e5c0f38c5c5c40001859bd3" : "Santo Hilario",
+            "5ed58895a7a0c01c36b9f8e85e5c0f38c5c5c40001859bd3" : "Santos Dumont",
+            "5ed58895a7a0c01c36b9f8eb5e5c0f38c5c5c40001859bd3" : "Sao Goncalo do Sapucai",
+            "5ed58895a7a0c01c36b9f8ee5e5c0f38c5c5c40001859bd3" : "Sao Joao del-Rei",
+            "5ed58895a7a0c01c36b9f8f15e5c0f38c5c5c40001859bd3" : "Sao Lourenco",
+            "5ed58895a7a0c01c36b9f8f45e5c0f38c5c5c40001859bd3" : "Sao Tiago",
+            "5ed58895a7a0c01c36b9f8f75e5c0f38c5c5c40001859bd3" : "Senhora dos Remedios",
+            "5ed58895a7a0c01c36b9f8fa5e5c0f38c5c5c40001859bd3" : "Tiradentes",
+            "5ed58895a7a0c01c36b9f8fd5e5c0f38c5c5c40001859bd3" : "Tremembe",
+            "5ed58895a7a0c01c36b9f9005e5c0f38c5c5c40001859bd3" : "Tres Coracoes",
+            "5ed58895a7a0c01c36b9f9035e5c0f38c5c5c40001859bd3" : "Tres Pontas",
+            "5ed58895a7a0c01c36b9f9065e5c0f38c5c5c40001859bd3" : "Varginha",
+            "5ed58895a7a0c01c36b9f9095e5c0f38c5c5c40001859bd3" : "Virginia"
         },
         "control3" : "Others Layers",
         "noLegend" : "To see legends, you should enable layers."
