- implementa lógica de limitar quantidade de layers ativas por vision - corrige estilo do outline do button de fechar o modal - insere o favicon do sisgeo

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,11 @@
         "title": {
             "default": "General Informations",
             "download": "Layer Download",
-            "metadata": "Metadata"
+            "metadata": "Metadata",
+            "warning": "Warning"
+        },
+        "body": {
+            "maximumLayersActiveWarning": "It's not possible to activate more than {{limit}} layers at the same time for this vision!"
         }
     },
     "menu" : {
